--- a/app/src/main/assets/web/index.html
+++ b/app/src/main/assets/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Hello from WebView</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Greetings</h1>
